Fix Twitter link

--- a/publication/2019-scirep-pm25-china/index.html
+++ b/publication/2019-scirep-pm25-china/index.html
@@ -231,8 +231,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-      href="https://twitter.com/intent/tweet?text=Estimation%20of%20PM2.5%20concentrations%20in%20China%20using%20a
-      %20spatial%20back-propagation%20neural%20network&amp;url=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2019-aip-machine-learning%2f"
+      href="https://twitter.com/intent/tweet?text=Estimation%20of%20PM2.5%20concentrations%20in%20China%20using%20a%20spatial%20back-propagation%20neural%20network&amp;url=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2019-scirep-pm25-china%2f"
          target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
@@ -319,8 +318,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Estimation%20of%20PM2.5%20concentrations%20in%20China%20using%20a
-         %20spatial%20back-propagation%20neural%20network&amp;url=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2019-aip-machine-learning%2f"
+         href="https://twitter.com/intent/tweet?text=Estimation%20of%20PM2.5%20concentrations%20in%20China%20using%20a%20spatial%20back-propagation%20neural%20network&amp;url=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2019-scirep-pm25-china%2f"
          target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
