--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       Re-training in the science of
       <a href="https://www.edx.org/course/climate-change-the-science-and-global-impact" target="_blank">Climate Change</a>,
       data assimilation and numerical weather prediction (NWP).
-      LTSM forecasting. Objective detection machine learning with 
+      LTSM forecasting. Objective detection with 
       <a href="https://en.wikipedia.org/wiki/Object_detection" target="_blank">YOLO</a>.
       OPS-SAT APT weather satellite reception with RTL-SDR and double-cross antennas.
       Deployment of python dashboards using <a href="https://dash.plot.ly/" target="_blank">Plotly Dash</a>.</p>
