--- a/index.html
+++ b/index.html
@@ -158,8 +158,7 @@
       <p><strong>CURRENT WORK</strong>: 
       Re-training in 
       <a href="https://www.edx.org/course/climate-change-the-science-and-global-impact" target="_blank">Climate Change</a>,
-      satellite data assimilation and numerical weather prediction (NWP).
-      OPS-SAT APT weather satellite reception with a RTL-SDR and double-cross antennas. 
+      satellite data assimilation and NWP. APT weather satellite reception with a RTL-SDR and double-cross antennas. 
       Objective detection of image features with 
       <a href="https://en.wikipedia.org/wiki/Object_detection" target="_blank">YOLO</a> and LTSM timeseries forecasting. 
       Deployment of python dashboards using <a href="https://dash.plot.ly/" target="_blank">Plotly Dash</a>.</p>
@@ -176,8 +175,8 @@
   <a href="https://en.wikipedia.org/wiki/Singular_spectrum_analysis" target="_blank">Singular spectrum analysis</a> 
   of geophysical time series of SO₂ over China and 
   <a href="https://www.sparc-climate.org/publications/sparc-reports/sparc-report-no-9/" target="_blank">trends in stratospheric O₃</a>. 
-  Fast NN-based radiative transfer solvers for retrieval and mapping of surface spectral solar irradiance 
-  and <a href="https://en.wikipedia.org/wiki/Ultraviolet_index" target="_blank">UV products</a>.</p>
+  Fast NN-based radiative transfer solvers for retrieval and  
+  and <a href="https://www.sciencedirect.com/science/article/abs/pii/S0022407315300078" target="_blank">mapping of surface spectral solar irradiance</a>.</p>
 
 <div class="alert alert-note">
   <div>
