--- a/index.html
+++ b/index.html
@@ -266,21 +266,19 @@
     <p>I was born in Liverpool, England in 1970 when the monthly mean CO₂ concentration was 325.68 ± 0.12 ppm. 
       I studied Pure &amp; Applied Physics at the University of Manchester (UMIST) 
       and graduated with a BSc (I:hons) in 1992. I obtained a PhD in Applied Mathematics in 1996 from the 
-      Mathematics Institute of Saint Andrews University on wave-particle interactions in thermonuclear fusion plasma. 
-      I have 15 years postgraduate research experience 
-      in the fields of Earth observation, remote sensing, applied statistics and scientific software engineering. 
-      I am a member of the <a href="https://www.mariecuriealumni.eu/" target="_blank">Marie-Curie Alumni Association</a>,
-      the <a href="https://www.egu.eu/" target="_blank">European Geosciences Union</a>,
-      and the <a href="https://www.rss.org.uk/" target="_blank">Royal Statistical Society</a>.
-      My last post was as a postdoc generating and analysing climate data from EO in the Department of Meteorology at the 
-      University of Reading where I worked for the 
+      Mathematics Institute of Saint Andrews University on <a href="https://www.egu.eu/" target="_blank">wave-particle interactions in thermonuclear fusion plasma</a>. 
+      I have 15 years postdoctoral research experience in the fields of 
+
+      <a href="https://patternizer.org/research/" target="_blank"></a>Earth observation, remote sensing, applied statistics and scientific software engineering</a>. 
+      I am a member of the <a href="https://www.mariecuriealumni.eu/" target="_blank">Marie-Curie Alumni Association</a> and
+      the <a href="https://www.egu.eu/" target="_blank">European Geosciences Union</a>. 
+      My last post was in the Department of Meteorology at the University of Reading generating and analysing climate data from EO  where I worked for the 
       <a href="http://www.fiduceo.eu/" target="_blank">H2020 FIDUCEO</a>,
       <a href="http://esa-sst-cci.org/" target="_blank">ESA SST_CCI</a>, and
       <a href="https://climate.copernicus.eu/evaluation-and-quality-control-observations" target="_blank">C3S EQCO</a> projects.</p>
 
     <div class="row">
 
-      
       <div class="col-md-5">
         <h3>Interests</h3>
         <ul class="ul-interests">
