--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     <p>I was born in Liverpool, England in 1970 when the monthly mean CO₂ concentration was 325.68 ± 0.12 ppm. 
       I studied Pure &amp; Applied Physics at the University of Manchester (UMIST) 
       and graduated with a BSc (I:hons) in 1992. I obtained a PhD in Applied Mathematics in 1996 from the 
-      Mathematics Institute of Saint Andrews University on <a href="https://www.egu.eu/" target="_blank">wave-particle interactions in thermonuclear fusion plasma</a>. 
+      Mathematics Institute of Saint Andrews University on <a href="https://aip.scitation.org/doi/abs/10.1063/1.871070" target="_blank">wave-particle interactions in thermonuclear fusion plasma</a>. 
       I have 15 years postdoctoral research experience in the fields of 
 
       <a href="https://patternizer.org/research/" target="_blank"></a>Earth observation, remote sensing, applied statistics and scientific software engineering</a>. 
