--- a/index.html
+++ b/index.html
@@ -390,10 +390,6 @@
       </div>
     </div>
     
-
-
-
-
     <div class="row experience">
       
       <div class="col-auto text-center flex-column d-none d-sm-flex">
@@ -402,7 +398,8 @@
           <div class="col">&nbsp;</div>
         </div>
         <div class="m-2">
-          <span class="badge badge-pill">&nbsp;</span>
+          <span class="badge badge-pill border ">&nbsp;</span>
+
         </div>
         <div class="row h-50">
           <div class="col border-right">&nbsp;</div>
