--- a/index.html
+++ b/index.html
@@ -391,15 +391,14 @@
     </div>
     
     <div class="row experience">
-      
+
       <div class="col-auto text-center flex-column d-none d-sm-flex">
         <div class="row h-50">
-          <div class="col ">&nbsp;</div>
+          <div class="col border-right">&nbsp;</div>
           <div class="col">&nbsp;</div>
         </div>
         <div class="m-2">
           <span class="badge badge-pill border ">&nbsp;</span>
-
         </div>
         <div class="row h-50">
           <div class="col border-right">&nbsp;</div>
