--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     
     <h1>Bio</h1>
 
-    <p id="justify-content">I was born in Liverpool, England in 1970 when the monthly mean CO₂ concentration was 325.68 ± 0.12 ppm. 
+    <p>I was born in Liverpool, England in 1970 when the monthly mean CO₂ concentration was 325.68 ± 0.12 ppm. 
       I studied Pure &amp; Applied Physics at the University of Manchester (UMIST) 
       and graduated with a BSc (I:hons) in 1992. I obtained a PhD in Applied Mathematics in 1996 from the 
       Mathematics Institute of Saint Andrews University on <a href="https://aip.scitation.org/doi/abs/10.1063/1.871070" target="_blank">wave-particle interactions in thermonuclear fusion plasma</a>. 
