--- a/index.html
+++ b/index.html
@@ -381,7 +381,8 @@
               <a href="https://courses.edx.org/certificates/d5d1bcb00718424481bd5288ab9286a7" target="_blank">Climate Change</a>,
               satellite data assimilation and NWP. APT weather satellite reception with a RTL-SDR and double-cross antennas. 
               Objective detection of image features with 
-              <a href="https://en.wikipedia.org/wiki/Object_detection" target="_blank">YOLO</a> and LTSM timeseries forecasting. 
+              <a href="https://en.wikipedia.org/wiki/Object_detection" target="_blank">YOLO</a> and 
+              <a href="https://en.wikipedia.org/wiki/Long_short-term_memory" target="_blank">LTSM</a> timeseries forecasting. 
               Deployment of python dashboards using <a href="https://dash.plot.ly/" target="_blank">Plotly Dash</a>.</p>
         
             </div>
