Added LTSM link

--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
       <a href="https://www.edx.org/course/climate-change-the-science-and-global-impact" target="_blank">Climate Change</a>,
       satellite data assimilation and NWP. APT weather satellite reception with a RTL-SDR and double-cross antennas. 
       Objective detection of image features with 
-      <a href="https://en.wikipedia.org/wiki/Object_detection" target="_blank">YOLO</a> and LTSM timeseries forecasting. 
+      <a href="https://en.wikipedia.org/wiki/Object_detection" target="_blank">YOLO</a> and 
+      <a href="https://en.wikipedia.org/wiki/Long_short-term_memory" target="_blank">LTSM</a> timeseries forecasting. 
       Deployment of python dashboards using <a href="https://dash.plot.ly/" target="_blank">Plotly Dash</a>.</p>
 
 <p><strong>RECENT WORK</strong>:
