Added link to SO2 over China paper

--- a/index.html
+++ b/index.html
@@ -174,10 +174,11 @@
   <a href="http://blogs.reading.ac.uk/weather-and-climate-at-reading/2019/mapping-bio-uv-products-from-space/" target="_blank">biological-UV</a> 
   ground data for validation of satellite products. 
   <a href="https://en.wikipedia.org/wiki/Singular_spectrum_analysis" target="_blank">Singular spectrum analysis</a> 
-  of geophysical time series of SO₂ over China and 
+  of geophysical time series of 
+  <a href="https://www.sciencedirect.com/science/article/abs/pii/S1352231016307087" target="_blank">SO₂ over China</a> and 
   <a href="https://www.sparc-climate.org/publications/sparc-reports/sparc-report-no-9/" target="_blank">trends in stratospheric O₃</a>. 
   Fast NN-based radiative transfer solvers for retrieval and  
-  and <a href="https://www.sciencedirect.com/science/article/abs/pii/S0022407315300078" target="_blank">mapping of surface spectral solar irradiance</a>.</p>
+  <a href="https://www.sciencedirect.com/science/article/abs/pii/S0022407315300078" target="_blank">mapping of surface spectral solar irradiance</a>.</p>
 
 <div class="alert alert-note">
   <div>
