Added link to APT weather satellite reception

--- a/index.html
+++ b/index.html
@@ -158,8 +158,10 @@
       <p><strong>CURRENT WORK</strong>: 
       Re-training in 
       <a href="https://www.edx.org/course/climate-change-the-science-and-global-impact" target="_blank">Climate Change</a>,
-      satellite data assimilation and NWP. APT weather satellite reception with a RTL-SDR and double-cross antennas. 
-      Objective detection of image features with 
+      satellite data assimilation and NWP. 
+      
+      <a href="https://www.rtl-sdr.com/rtl-sdr-tutorial-receiving-noaa-weather-satellite-images/" target="_blank">APT weather satellite reception with a RTL-SDR</a> and 
+      <a href="https://imgur.com/a/TiZ41" target="_blank">double-cross antennas</a>. Objective detection of image features with 
       <a href="https://en.wikipedia.org/wiki/Object_detection" target="_blank">YOLO</a> and 
       <a href="https://en.wikipedia.org/wiki/Long_short-term_memory" target="_blank">LTSM</a> timeseries forecasting. 
       Deployment of python dashboards using <a href="https://dash.plot.ly/" target="_blank">Plotly Dash</a>.</p>
