Added new code project containers

--- a/index.html
+++ b/index.html
@@ -793,10 +793,10 @@
             <div class="btn-group flex-wrap">
                 
                 <a href="#" data-filter="*" class="btn btn-primary btn-lg active">All</a>
-                <a href="#" data-filter=".js-id-ocean_area" class="btn btn-primary btn-lg">DASH</a>
+                <a href="#" data-filter=".js-id-dash" class="btn btn-primary btn-lg">DASH</a>
                 <a href="#" data-filter=".js-id-ocean_area" class="btn btn-primary btn-lg">SST_CCI</a>
                 <a href="#" data-filter=".js-id-plot_l1c" class="btn btn-primary btn-lg">FIDUCEO</a>
-                <a href="#" data-filter=".js-id-multimode" class="btn btn-primary btn-lg">SOLAR-UV</a>
+                <a href="#" data-filter=".js-id-solar-uv" class="btn btn-primary btn-lg">SOLAR-UV</a>
                 <a href="#" data-filter=".js-id-multimode" class="btn btn-primary btn-lg">AEROMAP</a>
               
             </div>
