--- a/index.html
+++ b/index.html
@@ -794,10 +794,14 @@
                 
                 <a href="#" data-filter="*" class="btn btn-primary btn-lg active">All</a>
                 <a href="#" data-filter=".js-id-dash" class="btn btn-primary btn-lg">DASH</a>
-                <a href="#" data-filter=".js-id-ocean_area" class="btn btn-primary btn-lg">SST_CCI</a>
+                <a href="#" data-filter=".js-id-lstm" class="btn btn-primary btn-lg">LSTM</a>
+                <a href="#" data-filter=".js-id-rtl-sdr" class="btn btn-primary btn-lg">RTL-SDR</a>
+                <a href="#" data-filter=".js-id-ozone" class="btn btn-primary btn-lg">ESA Ozone_CCI</a>
+                <a href="#" data-filter=".js-id-ocean_area" class="btn btn-primary btn-lg">ESA SST_CCI</a>
                 <a href="#" data-filter=".js-id-plot_l1c" class="btn btn-primary btn-lg">FIDUCEO</a>
                 <a href="#" data-filter=".js-id-solar-uv" class="btn btn-primary btn-lg">SOLAR-UV</a>
                 <a href="#" data-filter=".js-id-multimode" class="btn btn-primary btn-lg">AEROMAP</a>
+                <a href="#" data-filter=".js-id-sagan" class="btn btn-primary btn-lg">SAGAN</a>
               
             </div>
           </div>
