Added new code project containers

--- a/index.html
+++ b/index.html
@@ -794,6 +794,7 @@
                 
                 <a href="#" data-filter="*" class="btn btn-primary btn-lg active">All</a>
                 <a href="#" data-filter=".js-id-dash" class="btn btn-primary btn-lg">DASH</a>
+                <a href="#" data-filter=".js-id-yolo" class="btn btn-primary btn-lg">YOLO</a>
                 <a href="#" data-filter=".js-id-lstm" class="btn btn-primary btn-lg">LSTM</a>
                 <a href="#" data-filter=".js-id-rtl-sdr" class="btn btn-primary btn-lg">OPS-SAT</a>
                 <a href="#" data-filter=".js-id-plot_l1c" class="btn btn-primary btn-lg">H2020 FIDUCEO</a>
@@ -802,8 +803,6 @@
                 <a href="#" data-filter=".js-id-rssa-ga" class="btn btn-primary btn-lg">RSSA_ga</a>
                 <a href="#" data-filter=".js-id-solar-uv" class="btn btn-primary btn-lg">SOLAR-UV</a>
                 <a href="#" data-filter=".js-id-multimode" class="btn btn-primary btn-lg">AEROMAP</a>
-                <a href="#" data-filter=".js-id-aqi" class="btn btn-primary btn-lg">AQI</a>
-                <a href="#" data-filter=".js-id-astro" class="btn btn-primary btn-lg">ASTRO</a>
                 <a href="#" data-filter=".js-id-sagan" class="btn btn-primary btn-lg">SAGAN</a>
               
             </div>
