--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
       
 <div class="row">
   <div class="col-12 col-lg-4 section-heading">
-    <h1>Recent Talks</h1>
+    <h1>Talks</h1>
     
   </div>
   <div class="col-12 col-lg-8">
