--- a/project/plot_l1c/index.html
+++ b/project/plot_l1c/index.html
@@ -300,7 +300,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#talks"><span>Recent</span></a>
+          <a class="nav-link " href="/#talks"><span>Talks</span></a>
         </li>
 
         
