--- a/publication/2019-mdpi-gaps/index.html
+++ b/publication/2019-mdpi-gaps/index.html
@@ -299,7 +299,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#talks"><span>Recent</span></a>
+          <a class="nav-link " href="/#talks"><span>Talks</span></a>
         </li>
 
         
