--- a/talk/avhrr-fcdr/index.html
+++ b/talk/avhrr-fcdr/index.html
@@ -114,7 +114,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link " href="/#talks"><span>Recent</span></a>
+          <a class="nav-link " href="/#talks"><span>Talks</span></a>
         </li>
 
         <li class="nav-item">
