--- a/talk/estallidos-v/index.html
+++ b/talk/estallidos-v/index.html
@@ -116,7 +116,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link " href="/#talks"><span>Recent</span></a>
+          <a class="nav-link " href="/#talks"><span>Talks</span></a>
         </li>
 
         <li class="nav-item">
