Added full abstract

--- a/publication/2019-scidata-sst/index.html
+++ b/publication/2019-scidata-sst/index.html
@@ -406,8 +406,20 @@
   <div class="article-container">
 
     <h3>Abstract</h3>
-    <p class="pub-abstract" itemprop="text">
-      A climate data record of global sea surface temperature (SST) spanning 1981–2016 has been developed from 4 trillion satellite measurements of thermal infra-red radiance. The spatial area represented by pixel SST estimates is between 1 km² and 45 km². The mean density of good-quality observations is 13 km⁻² yr⁻¹. SST uncertainty is evaluated per datum, the median uncertainty for pixel SSTs being 0.18 K.
+    <p class="pub-abstract" itemprop="text">      
+      A climate data record of global sea surface temperature (SST) spanning 1981–2016 has been developed 
+      from 4 × 10¹² satellite measurements of thermal infra-red radiance. The spatial area represented by 
+      pixel SST estimates is between 1 km² and 45 km². The mean density of good-quality observations is 
+      13 km⁻² yr⁻¹. SST uncertainty is evaluated per datum, the median uncertainty for pixel SSTs being 
+      0.18 K. Multi-annual observational stability relative to drifting buoy measurements is within 
+      0.003 K  yr⁻¹ of zero with high confidence, despite maximal independence from in situ SSTs over the 
+      latter two decades of the record. Data are provided at native resolution, gridded at 0.05° 
+      latitude-longitude resolution (individual sensors), and aggregated and gap-filled on a daily 0.05° 
+      grid. Skin SSTs, depth-adjusted SSTs de-aliased with respect to the diurnal cycle, and SST anomalies 
+      are provided. Target applications of the dataset include: climate and ocean model evaluation; 
+      quantification of marine change and variability (including marine heatwaves); climate and 
+      ocean-atmosphere processes; and specific applications in ocean ecology, oceanography and geophysics.
+
     </p>
         
     <div class="row">
