Fixed typos in the abstract

--- a/publication/2019-scirep-pm25-china/index.html
+++ b/publication/2019-scirep-pm25-china/index.html
@@ -377,7 +377,23 @@
   <div class="article-container">
 
     <h3>Abstract</h3>
-    <p class="pub-abstract" itemprop="text">Methods for estimating the spatial distribution of PM2.5 concentrations have been developed but have not yet been able to effectively include spatial correlation. We report on the development of a spatial back-propagation neural network (S-BPNN) model designed specifically to make such correlations implicit by incorporating a spatial lag variable (SLV) as a virtual input variable. The S-BPNN fits the nonlinear relationship between ground-based air quality monitoring station measurements of PM2.5, satellite observations of aerosol optical depth, meteorological synoptic conditions data and emissions data that include auxiliary geographical parameters such as land use, normalized difference vegetation index, elevation, and population density. We trained and validated the S-BPNN for both yearly and seasonal mean PM2.5 concentrations. In addition, principal components analysis was employed to reduce the dimensionality of the data and a grid of neural network models was run to optimize the model design. The S-BPNN was cross-validated against an analogous but SLV-free BPNN model using the coefficient of determination (R2) and root mean squared error (RMSE) as statistical measures of goodness of fit. The inclusion of the SLV led to demonstrably superior performance of the S-BPNN over the BPNN with R2 values increasing from 0.80 to 0.89 and with the RMSE decreasing from 8.1 to 5.8 μg/m3. The yearly mean PM2.5 concentration in China during the study period was found to be 41.8 μg/m3 and the model estimated spatial distribution was found to exceed Level 2 of the China Ambient Air Quality Standards (CAAQS) enacted in 2012 (>35 μg/m3) in more than 70% of the Chinese territory. The inclusion of spatial correlation upgrades the performance of conventional BPNN models and provides a more accurate estimation of PM2.5 concentrations for air quality monitoring.</p>
+    <p class="pub-abstract" itemprop="text">
+    Methods for estimating the spatial distribution of PM2.5 concentrations have been developed but have not yet been 
+    able to effectively include spatial correlation. We report on the development of a spatial back-propagation neural 
+    network (S-BPNN) model designed specifically to make such correlations implicit by incorporating a spatial lag variable 
+    (SLV) as a virtual input variable. The S-BPNN fits the nonlinear relationship between ground-based air quality monitoring 
+    station measurements of PM2.5, satellite observations of aerosol optical depth, meteorological synoptic conditions data
+     and emissions data that include auxiliary geographical parameters such as land use, normalized difference vegetation index, 
+     elevation, and population density. We trained and validated the S-BPNN for both yearly and seasonal mean PM2.5 
+     concentrations. In addition, principal components analysis was employed to reduce the dimensionality of the data and a 
+     grid of neural network models was run to optimize the model design. The S-BPNN was cross-validated against an analogous 
+     but SLV-free BPNN model using the coefficient of determination (R²) and root mean squared error (RMSE) as statistical 
+     measures of goodness of fit. The inclusion of the SLV led to demonstrably superior performance of the S-BPNN over the 
+     BPNN with R² values increasing from 0.80 to 0.89 and with the RMSE decreasing from 8.1 to 5.8 μg/m³. The yearly mean 
+     PM2.5 concentration in China during the study period was found to be 41.8 μg/m³ and the model estimated spatial distribution 
+     was found to exceed Level 2 of the China Ambient Air Quality Standards (CAAQS) enacted in 2012 (>35 μg/m³) in more than 70% 
+     of the Chinese territory. The inclusion of spatial correlation upgrades the performance of conventional BPNN models and 
+     provides a more accurate estimation of PM2.5 concentrations for air quality monitoring.</p>
         
     <div class="row">
       <div class="col-md-1"></div>
