--- a/index.html
+++ b/index.html
@@ -1540,7 +1540,10 @@
 
     
     <div class="article-style" itemprop="articleBody">
-      The aim of the present study is to investigate the potential for building a common platform to support direct end-user application of …
+      The aim of the present study is to investigate the potential for building a common platform 
+      to support direct end-user application of machine learning algorithms across diverse scientific areas, 
+      emphasizing not only the suitability of appropriate tools, but also how results can be disseminated and 
+      utilised in a shared data environment. 
     </div>
     
     <div class="stream-meta article-metadata">
