--- a/index.html
+++ b/index.html
@@ -1593,9 +1593,10 @@
 
     
     <div class="article-style" itemprop="articleBody">
-      Decision makers need accessible robust evidence to introduce new policies to mitigate and adapt to climate change. There is an …
+      This paper presents the framework for Evaluation and Quality Control (EQC) of climate data products derived from satellite 
+      and in situ observations to be catalogued within the C3S Climate Data Store (CDS). The EQC framework will be implemented 
+      by C3S as part of their operational quality assurance programme.
     </div>
-    
 
     <div class="stream-meta article-metadata">
 
