--- a/index.html
+++ b/index.html
@@ -1706,7 +1706,10 @@
 
     
     <div class="article-style" itemprop="articleBody">
-      This Report summarises the main results obtained during the first year of the LOTUS activity, which was targeted at providing timely …
+      This Report summarises the main results obtained during the first year of the LOTUS activity, 
+      which was targeted at providing timely inputs to the 2018 WMO/UNEP Ozone Assessment. 
+      The scope of this Report is on changes in ozone levels in the middle and the upper stratosphere 
+      outside the polar regions as observed by merged satellite records. 
     </div>
     
 
@@ -1738,7 +1741,7 @@
   Cite
 </button>
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.17874/f899e57a20b" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://www.sparc-climate.org/publications/sparc-reports/sparc-report-no-9/" target="_blank" rel="noopener">
   DOI
 </a>
 
