Fix units in abstract

--- a/index.html
+++ b/index.html
@@ -1765,7 +1765,11 @@
 
     
     <div class="article-style" itemprop="articleBody">
-      This study estimates the impact of dust aerosols on surface solar radiation and solar energy in Egypt based on Earth Observation (EO) …
+      This study estimates the impact of dust aerosols on surface solar radiation and solar energy in Egypt 
+      based on Earth Observation (EO) related techniques. For this purpose, we exploited the synergy of 
+      monthly mean and daily post processed satellite remote sensing observations from the MODerate resolution 
+      Imaging Spectroradiometer (MODIS), radiative transfer model (RTM) simulations utilising machine learning, 
+      in conjunction with 1-day forecasts from the Copernicus Atmosphere Monitoring Service (CAMS). 
     </div>
     
 
