--- a/index.html
+++ b/index.html
@@ -1881,7 +1881,10 @@
 
     
     <div class="article-style" itemprop="articleBody">
-      This study focuses on the assessment of surface solar radiation (SSR) based on operational neural network (NN) and multi-regression …
+      This study focuses on the assessment of surface solar radiation (SSR) based on operational neural network (NN) 
+      and multi-regression function (MRF) modelling techniques that produce instantaneous (in less than 1min) outputs 
+      using real-time cloud and aerosol optical properties inputs from SEVIRI onboard MSG and the 
+      Copernicus Atmosphere Monitoring Service (CAMS).
     </div>
     
 
