--- a/index.html
+++ b/index.html
@@ -1996,7 +1996,11 @@
 
     
     <div class="article-style" itemprop="articleBody">
-      This study assesses the impact of dust on surface solar radiation focussing on an extreme dust event. For this purpose, we exploited …
+      This study assesses the impact of dust on surface solar radiation focussing on an extreme dust event. 
+      For this purpose, we exploited the synergy of AERONET measurements and passive and active satellite 
+      remote sensing (MODIS and CALIPSO) observations, in conjunction with radiative transfer model (RTM) 
+      and chemical transport model (CTM) simulations and the 1-day forecasts from the Copernicus Atmosphere 
+      Monitoring Service (CAMS). 
     </div>
     
 
