Fixed units in abstract

--- a/publication/2017-amt-ssr-dust/index.html
+++ b/publication/2017-amt-ssr-dust/index.html
@@ -773,7 +773,7 @@
       suggesting aged dust. RTM and CTM simulations were able to quantify the extent of dust impact on 
       surface irradiances and reveal substantial reduction in solar energy exploitation capacity of PV 
       and CSP installations under this high aerosol load. We found that such an extreme dust event can 
-      result in Global Horizontal Irradiance (GHI) attenuation by as much as 40-50\% and a much stronger 
+      result in Global Horizontal Irradiance (GHI) attenuation by as much as 40-50% and a much stronger 
       Direct Normal Irradiance (DNI) decrease (80-90%), while spectrally this attenuation is distributed 
       to 37% in the UV region, 33% in the visible and around 30% in the infrared. CAMS forecasts 
       provided a reliable available energy assessment (accuracy within 10% of that obtained from MODIS). 
