--- a/publication/2019-mdpi-ssr-egypt/index.html
+++ b/publication/2019-mdpi-ssr-egypt/index.html
@@ -777,7 +777,7 @@
       substantial PV and CSP capacity installed and found to be within 5-12% of that obtained from the 
       satellite observations, highlighting the ability to use such modelling approaches for solar energy 
       management and planning. Particulate matter resulted in attenuation by up to 64-107 kWh/m² 
-      for global horizontal irradiance (GHI) and 192-329 kWh/m2 for direct normal irradiance (DNI) annually. 
+      for global horizontal irradiance (GHI) and 192-329 kWh/m² for direct normal irradiance (DNI) annually. 
       This energy reduction is climatologically distributed between 0.7% and 12.9% in GHI and 2.9% to 41% 
       in DNI with the maximum values observed in spring following the frequent dust activity of Khamaseen. 
       Under extreme dust conditions the AOD is able to exceed 3.5 resulting in daily energy losses of more 
