Fixed units in abstract

--- a/index.html
+++ b/index.html
@@ -2112,7 +2112,10 @@
 
     
     <div class="article-style" itemprop="articleBody">
-      This study aims to cross-validate ground-based and satellite-based models of three photobiological UV effective dose products - the …
+      This study aims to cross-validate ground-based and satellite-based models of three photobiological UV 
+      effective dose products - the Commission Internationale de l’Eclairage (CIE) erythemal UV, the production 
+      of vitamin D in the skin, and DNA damage, using high-temporal-resolution surface-based measurements of 
+      solar UV spectral irradiances from a synergy of instruments and models. 
     </div>
     
 
