--- a/index.html
+++ b/index.html
@@ -2684,7 +2684,12 @@
 
     
     <div class="article-style" itemprop="articleBody">
-      Cluster analysis is applied to seven years of three-hourly gridded aerosol optical depth data from the Goddard Chemistry Aerosol …
+      Cluster analysis is applied to seven years of three-hourly gridded aerosol optical depth data from the Goddard Chemistry Aerosol 
+    Radiation and Transport model, to construct a spatial partition of the globe into a finite number of aerosol mixtures. The optimal 
+    number of aerosol mixtures is obtained with a k-means algorithm with smart seeding in conjunction with a stopping condition based 
+    on applying the ‘Law of diminishing returns’ to the norm of the Euclidean distance. The partition is used to extract AERONET 
+    Level-2 V2 inversion products in each cluster for estimating the values of key optical and microphysical parameters to help 
+    characterise aerosol mixtures.
     </div>
     
     <div class="stream-meta article-metadata">
