Remove reduced size images

--- a/index.html
+++ b/index.html
@@ -2759,7 +2759,12 @@
 
     
     <div class="article-style" itemprop="articleBody">
-      Here, a methodology based on neural networks is developed to retrieve such parameters from satellite inputs and to validate them with …
+      Here, a methodology based on neural networks is developed to retrieve such parameters from satellite inputs 
+      and to validate them with ground-based remote sensing data. For key combinations of input variables available 
+      from the MODerate resolution Imaging Spectroradiometer (MODIS) and the Ozone Measuring Instrument (OMI) 
+      Level 3 data sets, a grid of 100 feed-forward neural network architectures is produced to derive aerosol
+      optical and microphysical properties.
+
     </div>
     
 
