Fixed units in abstract

--- a/publication/2014-amt-dust-nn/index.html
+++ b/publication/2014-amt-dust-nn/index.html
@@ -770,7 +770,7 @@
       remote sensing data. For key combinations of input variables available from the MODerate resolution Imaging 
       Spectroradiometer (MODIS) and the Ozone Measuring Instrument (OMI) Level 3 data sets, a grid of 100 feed-forward 
       neural network architectures is produced, each having a different number of neurons and training proportion. The 
-      networks are trained with principal components accounting for 98\% of the variance of the inputs together with 
+      networks are trained with principal components accounting for 98% of the variance of the inputs together with 
       principal components formed from 38 AERONET L2.0 V2 retrieved parameters as outputs. Daily averaged, co-located 
       and synchronous data drawn from a cluster of AERONET sites centred on the peak of dust extinction in Northern Africa 
       is used for network training and validation, and the optimal network architecture for each input parameter combination 
