--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
       Re-training in 
       <a href="https://www.edx.org/course/climate-change-the-science-and-global-impact" target="_blank">climate change</a> science, 
       satellite data assimilation and NWP.    
-      <a href="https://www.rtl-sdr.com/rtl-sdr-tutorial-receiving-noaa-weather-satellite-images/" target="_blank">APT weather satellite reception with a RTL-SDR</a> and 
-      <a href="https://imgur.com/a/TiZ41" target="_blank">double-cross antennas</a>. Objective detection of image features with 
+      <a href="https://www.rtl-sdr.com/rtl-sdr-tutorial-receiving-noaa-weather-satellite-images/" target="_blank">APT weather satellite reception with an RTL-SDR</a> and 
+      <a href="https://imgur.com/a/TiZ41" target="_blank">double-cross antenna</a>. Objective detection of image features with 
       <a href="https://en.wikipedia.org/wiki/Object_detection" target="_blank">YOLO</a> and 
       <a href="https://en.wikipedia.org/wiki/Long_short-term_memory" target="_blank">LTSM</a> timeseries forecasting. 
       Deployment of python dashboards using <a href="https://dash.plot.ly/" target="_blank">Plotly Dash</a>.</p>
