Update talk straplines

--- a/index.html
+++ b/index.html
@@ -1050,7 +1050,7 @@
       <a href="/talk/solea/" itemprop="url">Estimation of the solar energy potential in Greece using satellite and ground-based observations</a>
     </h3>
     <div class="article-style" itemprop="articleBody">
-      GEO-CRADLE SENSE pilot progress update
+      H2020 GEO-CRADLE SENSE pilot progress update
     </div>
     <div class="stream-meta article-metadata">
       <div>
@@ -1092,7 +1092,7 @@
       <a href="/talk/skynet/" itemprop="url">A model of dust episode impact on surface solar irradiance</a>
     </h3>
     <div class="article-style" itemprop="articleBody">
-      GEO-CRADLE SENSE pilot progress update
+      H2020 GEO-CRADLE SENSE pilot progress update
     </div>
     <div class="stream-meta article-metadata">
       <div>
