Fix broken credit label

--- a/publication/2019-amt-ssr-assessment/index.html
+++ b/publication/2019-amt-ssr-assessment/index.html
@@ -585,7 +585,7 @@
     <div class="col-6">
       <div class="split-header-image">
         <img src="/publication/2019-amt-ssr-assessment/featured.png" itemprop="image" alt="">
-        <span class="article-header-caption">Image credit: <a href="https://www.atmos-meas-tech.net/11/907/2018/amt-11-907-2018-f02-thumb.png" target="_blank"><strong>AMT</strong></a></span>
+        <span class="article-header-caption">Image credit: <a href="featured.png" target="_blank"><strong>AMT</strong></a></span>
       </div>
     </div>
   </div>
