Update re-training blurb

--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@
             <div class="card-text">
 
               Re-training in 
-              <a href="https://courses.edx.org/certificates/d5d1bcb00718424481bd5288ab9286a7" target="_blank">Climate Change</a>,
-              satellite data assimilation and NWP. APT weather satellite reception with a RTL-SDR and double-cross antennas. 
+              <a href="https://courses.edx.org/certificates/d5d1bcb00718424481bd5288ab9286a7" target="_blank">Climate Change</a> science,
+              satellite data assimilation and NWP. APT weather satellite reception with an RTL-SDR and double-cross antenna. 
               Objective detection of image features with 
               <a href="https://en.wikipedia.org/wiki/Object_detection" target="_blank">YOLO</a> and 
               <a href="https://en.wikipedia.org/wiki/Long_short-term_memory" target="_blank">LTSM</a> timeseries forecasting. 
