Fix talk redirect URL

--- a/talk/avhrr-fcdr/index.html
+++ b/talk/avhrr-fcdr/index.html
@@ -321,7 +321,7 @@
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Event</div>
           <div class="col-12 col-md-9">
-            <a href="https://events.spacepole.be/event/56/contributions/574/" target="_blank" rel="noopener">
+            <a href="" target="_blank" rel="noopener">
               H2020 FIDUCEO General Assembly              
             </a>
           </div>
