Fix broken event link URLs

--- a/talk/space-weather/index.html
+++ b/talk/space-weather/index.html
@@ -318,10 +318,10 @@
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Event</div>
           <div class="col-12 col-md-9">
-            <a href="https://events.spacepole.be/event/56/contributions/574/" target="_blank" rel="noopener">
-              ISARS-NOA Lecture Series 
-            </a>
-          </div>
+
+              ISARS Lecture Series 
+
+            </div>
         </div>
       </div>
       <div class="col-md-1"></div>
@@ -334,7 +334,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Location</div>
-          <div class="col-12 col-md-9">ISARS-NOA, Athens, Greece</div>
+          <div class="col-12 col-md-9">NOA, Athens, Greece</div>
         </div>
       </div>
       <div class="col-md-1"></div>
