Fix broken event link URLs

--- a/talk/skynet/index.html
+++ b/talk/skynet/index.html
@@ -274,10 +274,6 @@
 </div>
 
   <div class="article-container">
-
-
-      <h3>Abstract</h3>
-      <p class="pub-abstract" itemprop="text">A model of dust episode impact on surface solar irradiance</p>
     
     <div class="row">
       <div class="col-md-1"></div>
@@ -288,6 +284,7 @@
             
             Mar 3, 2016
 
+          </div>
         </div>
       </div>
       <div class="col-md-1"></div>
