Update talk locations

--- a/index.html
+++ b/index.html
@@ -1102,7 +1102,7 @@
             
         </span>
         <span class="middot-divider"></span>
-        <span itemprop="location">International Skynet Workshop, Rome, Italy</span>
+        <span itemprop="location">International Skynet Workshop, CNR, Rome, Italy</span>
       </div>
     </div>
     <div class="btn-links">
