--- a/talk/skynet/index.html
+++ b/talk/skynet/index.html
@@ -313,7 +313,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Location</div>
-          <div class="col-12 col-md-9">Rome, Italy</div>
+          <div class="col-12 col-md-9">CNR, Rome, Italy</div>
         </div>
       </div>
       <div class="col-md-1"></div>
