--- a/talk/aeromap/index.html
+++ b/talk/aeromap/index.html
@@ -300,10 +300,6 @@
 </div>
 
   <div class="article-container">
-
-
-      <h3>Abstract</h3>
-      <p class="pub-abstract" itemprop="text">How a synergy of GOCART, MODIS and AERONET data can be used to train neural networks for producing global aerosol volume size distributions from space</p>
     
     <div class="row">
       <div class="col-md-1"></div>
@@ -342,9 +338,10 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Location</div>
-          <div class="col-12 col-md-9">Online: NASA-DISC, Maryland, USA</div>
+          <div class="col-12 col-md-9">NASA GES-DISC, Maryland, USA</div>
         </div>
       </div>
+    </div>
       <div class="col-md-1"></div>
     </div>
     <div class="d-md-none space-below"></div>
