--- a/talk/aeromap/index.html
+++ b/talk/aeromap/index.html
@@ -311,6 +311,7 @@
             Nov 13, 2014
 
           </div>
+        </div>
       </div>
       <div class="col-md-1"></div>
     </div>
@@ -327,6 +328,7 @@
 
         </div>
       </div>
+    </div>
       <div class="col-md-1"></div>
     </div>
     <div class="d-md-none space-below"></div>
