--- a/index.html
+++ b/index.html
@@ -1238,7 +1238,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0" itemprop="name">
-      <a href="/talk/space-weather/" itemprop="url">How well can machines be trained to predict space weather storms?</a>
+      <a href="/talk/space-weather/" itemprop="url">How well can machines be trained to predict space weather storms</a>
     </h3>
 
     <div class="article-style" itemprop="articleBody">
@@ -1276,8 +1276,6 @@
     
   </div>
 </div>
-
-
 
 
 
