--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                 
                 <a href="#" data-filter="*" class="btn btn-primary btn-lg active">All</a>
                 <a href="#" data-filter=".js-id-dash" class="btn btn-primary btn-lg">DASH</a>
-                <a href="#" data-filter=".js-id-yolo" class="btn btn-primary btn-lg">YOLO</a>
+                <a href="#" data-filter=".js-id-birdpy" class="btn btn-primary btn-lg">YOLO</a>
                 <a href="#" data-filter=".js-id-lstm" class="btn btn-primary btn-lg">LSTM</a>
                 <a href="#" data-filter=".js-id-rtl-sdr" class="btn btn-primary btn-lg">OPS-SAT</a>
                 <a href="#" data-filter=".js-id-plot_l1c" class="btn btn-primary btn-lg">H2020 FIDUCEO</a>
@@ -778,6 +778,14 @@
     <a href="https://github.com/patternizer/OCEAN_AREA" target="_blank" rel="noopener" itemprop="url">Ocean Area fraction</a>
   </span>
   <p class="project-summary">Calculation of high resolution latitudinal variation of ocean + sea ice area using the L4 landsea mask produced with the OSTIA reanalysis sytem v3.0.</p>
+</div>
+
+<div class="col-lg-12 project-item isotope-item js-id-birdpy" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
+    <a href="https://github.com/patternizer/birdpy" target="_blank" rel="noopener" itemprop="url">Bird Motion Tracking</a>
+  </span>
+  <p class="project-summary">Development version of code to convert .mov clips of birds in flight to ornitographic trajectories inspired by the work of http://www.xavibou.com/</p>
 </div>
 
     </div>
