--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
                 <a href="#" data-filter=".js-id-plot_l1c" class="btn btn-primary btn-lg">H2020 FIDUCEO</a>
                 <a href="#" data-filter=".js-id-ocean_area" class="btn btn-primary btn-lg">ESA SST_CCI</a>
                 <a href="#" data-filter=".js-id-ozone" class="btn btn-primary btn-lg">ESA Ozone_CCI</a>
-                <a href="#" data-filter=".js-id-rssa-ga" class="btn btn-primary btn-lg">RSSA_ga</a>
+                <a href="#" data-filter=".js-id-RSSA_ga" class="btn btn-primary btn-lg">RSSA_ga</a>
                 <a href="#" data-filter=".js-id-solar-uv" class="btn btn-primary btn-lg">SOLAR-UV</a>
                 <a href="#" data-filter=".js-id-multimode" class="btn btn-primary btn-lg">AEROMAP</a>
                 <a href="#" data-filter=".js-id-sagan" class="btn btn-primary btn-lg">SAGAN</a>
@@ -787,6 +787,17 @@
   </span>
   <p class="project-summary">Development version of code to convert .mov clips of birds in flight to ornitographic trajectories inspired by the work of http://www.xavibou.com/</p>
 </div>
+
+<div class="col-lg-12 project-item isotope-item js-id-RSSA_ga" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
+    <a href="https://github.com/patternizer/RSSA_ga" target="_blank" rel="noopener" itemprop="url">GA Optimisation of SSA in R</a>
+  </span>
+  <p class="project-summary">Optimisation of SSA in R using genetic programming</p>
+</div>
+
+
+
 
     </div>
 
