--- a/index.html
+++ b/index.html
@@ -247,11 +247,9 @@
 
       I love music, languages and patterns. I play the <a href="https://en.wikipedia.org/wiki/Tzouras" 
       target="_blank">Tzouras</a> and am fluent in Greek and Spanish. I am crazy about solving equations and playing chess.
-      In 1988, I represented
-      <a href="https://www.pinterest.co.uk/pin/368098969533449532/" target="_blank">Hong Kong</a> in the 
+      In 1988, I represented Hong Kong in the 
       <a href="https://www.chessgames.com/perl/chesscollection?cid=1031137" target="_blank">World Junior Chess Championship</a> in Adelaide. 
-      In 2009 I organised a <a href="https://chessfest2009.wordpress.com/" target="_blank">simul</a> 
-      for the Women's World Chess Chamption Alexandra Kosteniuk in Athens. Once upon a time I played a 6-board blindfold and still 'see'
+      In 2009 I organised a simul with the Women's World Chess Chamption Alexandra Kosteniuk in Athens. Once upon a time I played a 6-board blindfold and still 'see'
       more clearly in my mind's eye. I might get round to dusting off my 
       <a href="https://ratings.fide.com/profile/417394" target="_blank">FIDE rating</a>.
       
