--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
     <div class="col-12 col-lg-8">
       <p><strong>CURRENT WORK</strong>: 
       Re-training in 
-      <a href="https://www.edx.org/course/climate-change-the-science-and-global-impact" target="_blank">climate change</a> science, 
-      satellite data assimilation and NWP.    
-      <a href="https://www.rtl-sdr.com/rtl-sdr-tutorial-receiving-noaa-weather-satellite-images/" target="_blank">APT weather satellite reception with an RTL-SDR</a> and 
-      <a href="https://imgur.com/a/TiZ41" target="_blank">double-cross antenna</a>. Objective detection of image features with 
+      <a href="https://www.edx.org/course/climate-change-the-science-and-global-impact" target="_blank">climate change</a> 
+	  science, satellite data assimilation and WRF on a Raspberry Pi.    
+      <a href="https://twitter.com/MichaelTaylorEO/status/1247968295422214152" target="_blank">APT weather satellite reception with an RTL-SDR</a> and 
+      <a href="https://twitter.com/MichaelTaylorEO/status/1247960062926163972" target="_blank">quadrifilar helix antenna</a>. Objective detection of image features with 
       <a href="https://en.wikipedia.org/wiki/Object_detection" target="_blank">YOLO</a> and 
       <a href="https://en.wikipedia.org/wiki/Long_short-term_memory" target="_blank">LTSM</a> timeseries forecasting. 
       Deployment of python dashboards using <a href="https://dash.plot.ly/" target="_blank">Plotly Dash</a>.</p>
@@ -151,7 +151,11 @@
   <div>
     This github.io will continuously evolve. Please <strong>refresh your browser</strong>.
   </div>
+
 </div>
+
+  <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script>
+  <script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#29abe0', 'O5O51LU7A');kofiwidget2.draw();</script> 
 
     </div>
   
@@ -252,7 +256,7 @@
       Once upon a time I played a 6-board blindfold and still 'see'
       more clearly in my mind's eye. I might get round to dusting off my 
       <a href="https://ratings.fide.com/profile/417394" target="_blank">FIDE rating</a>.
-      
+	        
     <div class="row">
 
       <div class="col-md-5">
