Added link to patternizer.org

--- a/index.html
+++ b/index.html
@@ -147,6 +147,12 @@
   Fast NN-based radiative transfer solvers for retrieval and  
   <a href="https://www.sciencedirect.com/science/article/abs/pii/S0022407315300078" target="_blank">mapping of surface spectral solar irradiance</a>.</p>
 
+<p><strong>WEBLOG</strong>:
+	
+   Mirrored to some extent also at my <a href="https://patternizer.org" target="_blank">weblog</a>. 
+   
+</p>
+
 <div class="alert alert-note">
   <div>
     This github.io will continuously evolve. Please <strong>refresh your browser</strong>.
