--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
                 <a href="#" data-filter=".js-id-dash" class="btn btn-primary btn-lg">DASH</a>
                 <a href="#" data-filter=".js-id-birdpy" class="btn btn-primary btn-lg">YOLO</a>
                 <a href="#" data-filter=".js-id-lstm" class="btn btn-primary btn-lg">LSTM</a>
-                <a href="#" data-filter=".js-id-rtl-sdr" class="btn btn-primary btn-lg">OPS-SAT</a>
+                <a href="#" data-filter=".js-id-ops_sat" class="btn btn-primary btn-lg">OPS-SAT</a>
                 <a href="#" data-filter=".js-id-plot_l1c" class="btn btn-primary btn-lg">H2020 FIDUCEO</a>
                 <a href="#" data-filter=".js-id-ocean_area" class="btn btn-primary btn-lg">ESA SST_CCI</a>
                 <a href="#" data-filter=".js-id-ozone" class="btn btn-primary btn-lg">ESA Ozone_CCI</a>
