Add QFH project to project links

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 	  science, satellite data assimilation and WRF on a Raspberry Pi.    
       <a href="https://twitter.com/MichaelTaylorEO/status/1247968295422214152" target="_blank">APT weather satellite reception with an RTL-SDR</a> and 
       <a href="https://twitter.com/MichaelTaylorEO/status/1247960062926163972" target="_blank">quadrifilar helix antenna</a>. Objective detection of image features with 
-      <a href="https://en.wikipedia.org/wiki/Object_detection" target="_blank">YOLO</a> and 
+      <a href="https://github.com/patternizer/birdpy" target="_blank">OpenCV2 </a>and YOLO and 
       <a href="https://en.wikipedia.org/wiki/Long_short-term_memory" target="_blank">LTSM</a> timeseries forecasting. 
-      Deployment of python dashboards using <a href="https://dash.plot.ly/" target="_blank">Plotly Dash</a>.</p>
+      Deployment of Plotly Dash python <a href="https://patternizer-covid19.herokuapp.com/" target="_blank">dashboards</a>.</p>
 
 <p><strong>RECENT WORK</strong>:
 
@@ -353,10 +353,10 @@
 			  <a href="https://twitter.com/MichaelTaylorEO/status/1247968295422214152" target="_blank">APT weather satellite reception with an RTL-SDR</a> and 
               <a href="https://twitter.com/MichaelTaylorEO/status/1247960062926163972" target="_blank">quadrifilar helix antenna</a>.	  
               Objective detection of image features with 
-              <a href="https://en.wikipedia.org/wiki/Object_detection" target="_blank">YOLO</a> and 
+              <a href="https://github.com/patternizer/birdpy" target="_blank">OpenCV2 </a>and YOLO and 
               <a href="https://en.wikipedia.org/wiki/Long_short-term_memory" target="_blank">LTSM</a> timeseries forecasting. 
-              Deployment of python dashboards using <a href="https://dash.plot.ly/" target="_blank">Plotly Dash</a>.</p>
-        	  
+              Deployment of Plotly Dash python <a href="https://patternizer-covid19.herokuapp.com/" target="_blank">dashboards</a>.</p>
+        	  			  
             </div>
           </div>
         </div>
@@ -813,6 +813,13 @@
   <p class="project-summary">Neural network radiative transfer solver for generation of surface solar spectral radiance maps and UV products </p>
 </div>
 
+<div class="col-lg-12 project-item isotope-item js-id-ops_sat" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
+    <a href="https://www.linkedin.com/pulse/remote-sensing-weather-satellites-qfh-michael-taylor?articleId=6654399994562392064#comments-6654399994562392064&trk=public_profile_article_view" target="_blank" rel="noopener" itemprop="url">OPS-SAT</a>
+  </span>
+  <p class="project-summary">Remote sensing of weather satellites with a quadrifilar helix (QFH) antenna </p>
+</div>
 
 
 
