--- a/index.html
+++ b/index.html
@@ -745,8 +745,8 @@
             <div class="btn-group flex-wrap">
                 
                 <a href="#" data-filter="*" class="btn btn-primary btn-lg active">All</a>
-                <a href="#" data-filter=".js-id-dash" class="btn btn-primary btn-lg">DASH</a>
-                <a href="#" data-filter=".js-id-birdpy" class="btn btn-primary btn-lg">YOLO</a>
+                <a href="#" data-filter=".js-id-dash" class="btn btn-primary btn-lg">Dash</a>
+                <a href="#" data-filter=".js-id-birdpy" class="btn btn-primary btn-lg">OpenCV2</a>
                 <a href="#" data-filter=".js-id-lstm" class="btn btn-primary btn-lg">LSTM</a>
                 <a href="#" data-filter=".js-id-ops_sat" class="btn btn-primary btn-lg">OPS-SAT</a>
                 <a href="#" data-filter=".js-id-plot_l1c" class="btn btn-primary btn-lg">H2020 FIDUCEO</a>
@@ -819,6 +819,14 @@
     <a href="https://www.linkedin.com/pulse/remote-sensing-weather-satellites-qfh-michael-taylor?articleId=6654399994562392064#comments-6654399994562392064&trk=public_profile_article_view" target="_blank" rel="noopener" itemprop="url">OPS-SAT</a>
   </span>
   <p class="project-summary">Remote sensing of weather satellites with a quadrifilar helix (QFH) antenna </p>
+</div>
+
+<div class="col-lg-12 project-item isotope-item js-id-dash" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
+    <a href="https://patternizer-covid19.herokuapp.com/" target="_blank" rel="noopener" itemprop="url">Plotly Dash</a>
+  </span>
+  <p class="project-summary">Coronavirus counter-measures: global status dashboard </p>
 </div>
 
 
