Point to background image

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 <span class="js-widget-page d-none"></span>
 
-  <section id="demo" class="home-section wg-blank dark parallax " style="background-image: linear-gradient(DeepSkyBlue, SkyBlue);background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(&#39;https://patternizer.github.io/img/PolarBear.jpg&#39;);" >
+  <section id="demo" class="home-section wg-blank dark parallax " style="background-image: linear-gradient(DeepSkyBlue, SkyBlue);background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(&#39;https://patternizer.github.io/img/background.jpg&#39;);" >
     <div class="container">
 
 <div class="row">
