--- a/project/index.html
+++ b/project/index.html
@@ -174,7 +174,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/"><img src="/img/MT7.png" alt="Patternizer"></a>
+<!--      <a class="navbar-brand" href="/"><img src="/img/MT7.png" alt="Patternizer"></a> -->
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
