--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   
 <nav class="navbar navbar-light fixed-top navbar-expand-lg py-0" id="navbar-main">
   <div class="container">    
-      <a class="navbar-brand" href="/"><img src="/img/MT7.png" alt="Patternizer"></a>
+<!--      <a class="navbar-brand" href="/"><img src="/img/MT7.png" alt="Patternizer"></a>   -->
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span><i class="fas fa-bars"></i></span>
