--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
 	
    Mirrored to some extent also at my <a href="https://patternizer.org" target="_blank">weblog</a>. 
    
+<codersrank-widget username="patternizer"></codersrank-widget>
+   
 </p>
 
 <div class="alert alert-note">
@@ -3727,6 +3729,8 @@ the separation of the dust portion in detected dust mixtures, and the averaging 
     </div>
   </div>
 </div>
+
+<script src="https://profile.codersrank.io/widget/widget.js"></script>
 
 </body>
 </html>
