--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
   <div class="col-12 col-lg-4">
     <div id="profile">
       
-      <img class="portrait" src="/authors/admin/avatar_hu52a603635ecebd45650b162dadabb4e5_12861_250x250_fill_q90_lanczos_center.jpg" itemprop="image" alt="Avatar">
+<!--      <img class="portrait" src="/authors/admin/avatar_hu52a603635ecebd45650b162dadabb4e5_12861_250x250_fill_q90_lanczos_center.jpg" itemprop="image" alt="Avatar"> -->
+      <img class="portrait" src="/authors/admin/fibonacci-from-1000.png" itemprop="image" alt="Avatar">
       
       <div class="portrait-title">
         <h2 itemprop="name">Michael Taylor</h2>
