--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
   
 <nav class="navbar navbar-light fixed-top navbar-expand-lg py-0" id="navbar-main">
   <div class="container">    
-<!--      <a class="navbar-brand" href="/"><img src="/img/avatar.png" alt="Patternizer"></a>   -->
-      <a class="navbar-brand" href="/"><img src="/img/avatar.png" alt="Patternizer"></a>
+      <a class="navbar-brand" href="/"><img src="/authors/admin/patternizer_250x250.jpg" alt="Patternizer"></a>  
+<!--      <a class="navbar-brand" href="/"><img src="/img/avatar.png" alt="Patternizer"></a> -->
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span><i class="fas fa-bars"></i></span>
@@ -178,8 +178,7 @@
   <div class="col-12 col-lg-4">
     <div id="profile">
       
-<!--      <img class="portrait" src="/authors/admin/avatar_hu52a603635ecebd45650b162dadabb4e5_12861_250x250_fill_q90_lanczos_center.jpg" itemprop="image" alt="Avatar"> -->
-      <img class="portrait" src="/authors/admin/avatar.jpg" itemprop="image" alt="Avatar">
+      <img class="portrait" src="/authors/admin/patternizer.jpg" itemprop="image" alt="Avatar">
       
       <div class="portrait-title">
         <h2 itemprop="name">Michael Taylor</h2>
