--- a/index.html
+++ b/index.html
@@ -125,12 +125,22 @@
       <p><strong>CURRENT WORK</strong>: 
       Re-training in 
       <a href="https://www.edx.org/course/climate-change-the-science-and-global-impact" target="_blank">climate change</a> 
-	  science, satellite data assimilation and WRF on a Raspberry Pi.    
-      <a href="https://twitter.com/MichaelTaylorEO/status/1247968295422214152" target="_blank">APT weather satellite reception with an RTL-SDR</a> and 
-      <a href="https://twitter.com/MichaelTaylorEO/status/1247960062926163972" target="_blank">quadrifilar helix antenna</a>. Objective detection of image features with 
-      <a href="https://github.com/patternizer/birdpy" target="_blank">OpenCV2 </a>and YOLO and 
-      <a href="https://en.wikipedia.org/wiki/Long_short-term_memory" target="_blank">LTSM</a> timeseries forecasting. 
-      Deployment of Plotly Dash python <a href="https://patternizer-covid19.herokuapp.com/" target="_blank">dashboards</a>.</p>
+	  science. I am working on a <a href="https://patternizer.org/weather-station" target="_blank">remote sensing station</a> that receives 
+      <a href="https://twitter.com/MichaelTaylorEO/status/1247968295422214152" target="_blank">APT weather satellite data</a> 
+	  with an RTL-SDR dongle and a 
+      <a href="https://twitter.com/MichaelTaylorEO/status/1247960062926163972" target="_blank">quadrifilar helix antenna</a>.
+	  I am programming a Raspberry Pi3 to automate the downlink and serve the imagery via a web app in Plotly Reactive Dash 
+	  running on Heroku for comparison with simulations from NCAR’s Weather Research and Forcasting 
+	  (<a href="https://ral.ucar.edu/solutions/products/weather-research-and-forecasting-model-wrf" target="_blank">WRF</a>) model.
+	  The app also uses API to draw in hourly meteorological and hydrological data from UKMO and UKEA.	  
+	  I am learning objective detection of image features with 
+      <a href="https://github.com/patternizer/birdpy" target="_blank">OpenCV2 </a>and 
+	  <a href="https://pjreddie.com/darknet/yolo/" target="_blank">YOLO</a>.      <a href="https://en.wikipedia.org/wiki/Long_short-term_memory" target="_blank">LTSM</a> timeseries forecasting. 
+      i have deveoped a Plotly Reactive App to provide a global daily update of 
+	  <a href="https://patternizer-covid19.herokuapp.com/" target="_blank">Coronavirus counter-measures</a> and
+	  country-level operational <a href="https://patternizer-covid19.herokuapp.com/" target="_blank">hindcast/forecast</a>.
+	  I am working with Professor Amy Catanzano on <a href="https://patternizer-covid19.herokuapp.com/" target="_blank">quantum poetry</a>.
+	  </p>
 
 <p><strong>RECENT WORK</strong>:
 
